# gwent_website

./: .env.j2  .gitignore  Makefile  README.md  deploy.yml  hosts  make_deploy.yml  manage.py  pyproject.toml  run_ngrok.py
.github/workflows/: deploy.yml
ansible/: .env.j2  make_deploy.yml
game_gwent/: asgi.py  mixins.py  settings.py  storage_backends.py  urls.py  validators.py  views.py  wsgi.py
game_gwent/cart/: apps.py  urls.py  views.py
game_gwent/catalog/: apps.py  models.py  urls.py  views.py
game_gwent/catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_remove_product_image_product_main_image_productimage.py  0004_alter_productimage_options.py  0005_alter_productimage_options.py  0006_alter_productimage_options.py  0007_alter_product_main_image_alter_productimage_image.py
game_gwent/crm/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  webhooks.py
game_gwent/crm/migrations/: 0001_initial.py  0002_order_address.py  0003_alter_address_region.py  0004_order_user_comment.py  0005_address_is_empty.py  0006_remove_address_is_empty_address_is_manual.py  0007_alter_address_options_alter_order_options_and_more.py
game_gwent/static/game_gwent/cart/css/: cart.css
game_gwent/static/game_gwent/crm/js/: dadata_autocomplete.js  delivery_check.js
game_gwent/static/game_gwent/css/: product.css
game_gwent/templates/: about.html  contact.html  home_page.html  index.html
game_gwent/templates/cart/: cart.html
game_gwent/templates/catalog/: product.html  product_show.html
game_gwent/templates/crm/: order.html  order_processed.html  payment_success.html
game_gwent/templates/layouts/: base.html  footer.html  header.html  navbar.html  product.html
